# ClawBotAutomaticMessage

./: .env.example  .gitignore  README.md  main.py
app/: database.py  main.py
app/bot/: __init__.py  client.py  session.py
app/bot/handlers/: __init__.py  product_handler.py  query_handler.py
app/db/: card_db.py  order_db.py  product_db.py  transaction_db.py  user_db.py
app/models/: __init__.py  card.py  order.py  product.py  user.py
app/web/: app.py
app/web/templates/: base.html  dashboard.html  orders.html  product_cards.html  products.html  recharge_cards.html
docs/: README.md
tests/: test_handlers.py
wechat-clawbot/: .gitignore  pyproject.toml
wechat-clawbot/app/: config.py
wechat-clawbot/app/bot/: dispatcher.py
wechat-clawbot/app/bot/handlers/: auth_handler.py  recharge_handler.py
wechat-clawbot/app/db/: __init__.py
wechat-clawbot/app/models/: transaction.py
wechat-clawbot/app/web/templates/: login.html  transactions.html  users.html
wechat-clawbot/tests/: test_db.py
