[project]
name = "wechat-clawbot"
version = "1.0.0"
description = "ClawBot微信虚拟商品自动售卖机器人"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.0",
    "qrcode[pil]>=7.4.2",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
wechat-bot = "app.main:run_bot"
wechat-web = "app.main:run_web"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
